--- a/_config.yml
+++ b/_config.yml
@@ -140,7 +140,7 @@ page-col: "#FDFCF9"
 text-col: "#2E2A25"
 link-col: "#CC7722"
 hover-col: "#CC7722"
-navbar-col: "##355E3B"
+navbar-col: "#355E3B"
 navbar-text-col: "#ffffff"
 navbar-border-col: "#DDDDDD"
 footer-col: "#355E3B"
