--- a/_config.yml
+++ b/_config.yml
@@ -141,11 +141,11 @@ text-col: "#2E2A25"
 link-col: "#CC7722"
 hover-col: "#CC7722"
 navbar-col: "#355E3B"
-navbar-text-col: "#ffffff"
-navbar-border-col: "#DDDDDD"
+navbar-text-col: "#FDFCF9"
+navbar-border-col: "#355E3B"
 footer-col: "#355E3B"
-footer-text-col: "#FFFFFF"
-footer-link-col: "#FFFFFF"
+footer-text-col: "#FDFCF9"
+footer-link-col: "#FDFCF9"
 footer-hover-col: "#CC7722"
 
 # Alternatively, the navbar, footer, and page background can be set to an image
