--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: Viki's Abenteuer
+title: konfliktoria
 
 # Your name to show in the footer
 author: Viki
@@ -117,7 +117,7 @@ feed_show_excerpt: true
 feed_show_tags: false
 
 # Add a search button to the navbar
-post_search: true
+post_search: false
 
 # Add a button in the footer to edit the current page. Only works if your website is hosted on GitHub
 edit_page_button: false
