--- a/_config.yml
+++ b/_config.yml
@@ -182,9 +182,9 @@ footer-hover-col: "#CC7722"
 # Matomo (aka Piwik) Web statistics
 # Uncomment the following section to enable Matomo. The opt-out parameter controls
 # whether or not you want to allow users to opt out of tracking.
-#matomo:
-#  site_id: "9"
-#  uri: "demo.wiki.pro"
+matomo:
+  site_id: "9"
+  uri: "demo.wiki.pro"
 #  opt-out: true
 
 # Google Universal Analytics ID -- deprecated
